--- a/开发环境搭建.md
+++ b/开发环境搭建.md
@@ -42,11 +42,11 @@ set GOVERSION=go1.18.3
 ····
 ```
 
-# 开发环境问题
+# [开发环境问题](https://www.jetbrains.com/help/go/2021.1/configuring-goroot-and-gopath.html)
 
 ## [「goland-ide配置GOROOT报错」The selected directory is not a valid home for Go SDK](https://blog.csdn.net/qq_26979105/article/details/122677749)
 
->如下图所示我们配置**GOROOT**报错**所选目录不是Go SDK的有效主目录**
+>如下图所示我们配置**GOROOT**报错**所选目录不是Go SDK的有效主目录**(这是由于goland用的版本比较低)
 >
 >**解决方案**
 >
