--- a/开发环境搭建.md
+++ b/开发环境搭建.md
@@ -27,6 +27,39 @@
 
 ![image-20220620155719041](C:\Users\铺先生技术研发中心\AppData\Roaming\Typora\typora-user-images\image-20220620155719041.png)
 
+## linux 安装
+
+```shell
+# 下载安装包
+wget https://golang.google.cn/dl/go1.20.2.linux-amd64.tar.gz
+
+# 解压安装包
+tar -zxvf go1.20.2.linux-amd64.tar.gz
+
+# 转移安装目录
+mv go /usr/local/
+
+# 配置环境变量
+vim  /etc/profile
+
+# 添加环境变量
+
+export PATH=$PATH:/usr/local/go/bin
+
+# 使环境变量生效
+source /etc/profile
+```
+
+
+
+
+
+
+
+
+
+
+
 ## 测试是否安装成功
 
 ```shell
