--- a/开发环境搭建.md
+++ b/开发环境搭建.md
@@ -31,7 +31,7 @@
 
 ```shell
 # 下载安装包
-wget https://golang.google.cn/dl/go1.20.2.linux-amd64.tar.gz
+wget --no-check-certificate https://golang.google.cn/dl/go1.20.2.linux-amd64.tar.gz
 
 # 解压安装包
 tar -zxvf go1.20.2.linux-amd64.tar.gz
