--- a/开发环境搭建.md
+++ b/开发环境搭建.md
@@ -50,7 +50,31 @@ export PATH=$PATH:/usr/local/go/bin
 source /etc/profile
 ```
 
+## 安装bug解析
 
+### alpine 安装go环境后使用`go version`没有作用问题
+
+**参考**
+
+> https://www.mayanpeng.cn/archives/218.html
+
+```shell
+localhost:/usr/local/go/bin# ls
+go     gofmt
+localhost:/usr/local/go/bin# ldd go
+	/lib64/ld-linux-x86-64.so.2 (0x7f724a78e000)
+Error loading shared library libresolv.so.2: No such file or directory (needed by go)
+	libpthread.so.0 => /lib64/ld-linux-x86-64.so.2 (0x7f724a78e000)
+	libc.so.6 => /lib64/ld-linux-x86-64.so.2 (0x7f724a78e000)
+localhost:/usr/local/go/bin# 
+
+
+# 解决方案
+/usr/local/go/bin # mkdir /lib64
+/usr/local/go/bin # ln -s /lib/libc.musl-x86_64.so.1 /lib64/ld-linux-x86-64.so.2
+/usr/local/go/bin # go version
+go version go1.19.3 linux/amd64
+```
 
 
 
