--- a/开发环境搭建.md
+++ b/开发环境搭建.md
@@ -25,7 +25,7 @@
 
 > 右键**此电脑-属性-高级系统设置-高级-环境变量**  **系统变量中新建 指向解压的go安装包的bin目录即可**
 
-![image-20220620155719041](C:\Users\铺先生技术研发中心\AppData\Roaming\Typora\typora-user-images\image-20220620155719041.png)
+![image-20220620155719041](https://yaoliuyang-blog-images.oss-cn-beijing.aliyuncs.com/blogImages/image-20220620155719041.png)
 
 ## linux 安装
 
