--- a/开发环境搭建.md
+++ b/开发环境搭建.md
@@ -99,6 +99,25 @@ set GOVERSION=go1.18.3
 ····
 ```
 
+## 修改国内镜像源
+
+**镜像源国内地址**
+
+| 名称           | 地址                                                         |
+| -------------- | ------------------------------------------------------------ |
+| 镜像源开源地址 | [link](https://developer.aliyun.com/mirror/goproxy?spm=a2c6h.13651102.0.0.3e221b116yhrsV) |
+
+**修改环境变量**
+
+```shell
+# 查看当前环境变量
+[root@yaoliuyang ~]# go env
+# 修改为国内镜像源
+[root@yaoliuyang ~]# go env -w GOPROXY=https://mirrors.aliyun.com/goproxy/
+```
+
+
+
 # [开发环境问题](https://www.jetbrains.com/help/go/2021.1/configuring-goroot-and-gopath.html)
 
 ## [「goland-ide配置GOROOT报错」The selected directory is not a valid home for Go SDK](https://blog.csdn.net/qq_26979105/article/details/122677749)
