--- a/gin框架/框架资料.md
+++ b/gin框架/框架资料.md
@@ -1,6 +1,7 @@
 ## 资料
 
-| 名称     | 地址                                                 |
-| -------- | ---------------------------------------------------- |
-| 中文文档 | [link](https://gin-gonic.com/zh-cn/docs/benchmarks/) |
+| 名称            | 地址                                                 |
+| --------------- | ---------------------------------------------------- |
+| 中文文档        | [link](https://gin-gonic.com/zh-cn/docs/benchmarks/) |
+| go wiki社区资料 | [link](https://learnku.com/go/wikis)                 |
 
