--- a/gin框架/框架资料.md
+++ b/gin框架/框架资料.md
@@ -13,7 +13,32 @@
 | ---- | ------------------------------------------------------------ |
 | 博客 | [link](https://blog.csdn.net/weixin_45719444/article/details/121711250) |
 
+###  **安装命令**
 
+```shell
+go get -u github.com/gin-gonic/gin
+```
+
+**补充**
+
+**修改镜像源**
+
+> 当前修改为**阿里镜像源**
+
+```shell
+# 查看当前环境变量
+[root@yaoliuyang ~]# go env
+# 修改为国内镜像源
+[root@yaoliuyang ~]# go env -w GOPROXY=https://mirrors.aliyun.com/goproxy/
+```
+
+
+
+### **bug解析**
+
+> 如果报错**file not found in current directory or any parent directory(在当前目录或任何父目录中找不到Mod文件)**  
+>
+> go mode 是保存包结构用的
 
 ```shell
 yaoliuyang@yaoliuyang-PC:~/Documents/work/go_demos$ go get -u github.com/gin-gonic/gin
@@ -23,5 +48,22 @@ go: go.mod file not found in current directory or any parent directory.
         like 'go install example.com/cmd@latest'
         For more information, see https://golang.org/doc/go-get-install-deprecation
         or run 'go help get' or 'go help install'.
+        
+   # 解决方案-写入一个Mod文件,也可以ide右键创建 Go Modules File     
+go mod init 项目名称        
 ```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
