--- a/开发环境搭建.md
+++ b/开发环境搭建.md
@@ -133,3 +133,35 @@ set GOVERSION=go1.18.3
 >重新选择**到项目目录即可**
 
 ![image-20220620154707417](https://yaoliuyang-blog-images.oss-cn-beijing.aliyuncs.com/blogImages/image-20220620154707417.png)
+
+## [cgo: C compiler “gcc“ not found: exec: “gcc“: executable file not found in %PATH%](https://www.cnblogs.com/kala00k/p/16364116.html)
+
+### [安装mingw](https://sourceforge.net/projects/mingw-w64/files/)
+
+> [个人网盘分享-win](https://yaoliuyang.lanzoul.com/iTFMY0utohxe)
+
+![image-20230506145151017](https://yaoliuyang-blog-images.oss-cn-beijing.aliyuncs.com/blogImages/image-20230506145151017.png)
+
+**下载后解压**
+
+> D:\Program Files\mingw64
+
+![image-20230506150005183](https://yaoliuyang-blog-images.oss-cn-beijing.aliyuncs.com/blogImages/image-20230506150005183.png)
+
+**配置环境变量**
+
+![image-20230506150042127](https://yaoliuyang-blog-images.oss-cn-beijing.aliyuncs.com/blogImages/image-20230506150042127.png)
+
+**测试是否安装成功**
+
+```shell
+C:\Users\铺先生技术研发中心>gcc -v
+Using built-in specs.
+COLLECT_GCC=gcc
+COLLECT_LTO_WRAPPER=D:/Program\ Files/mingw64/bin/../libexec/gcc/x86_64-w64-mingw32/8.1.0/lto-wrapper.exe
+Target: x86_64-w64-mingw32
+Configured with: ../../../src/gcc-8.1.0/configure --host=x86_64-w64-mingw32 --build=x86_64-w64-mingw32 --target=x86_64-w64-mingw32 --prefix=/mingw64 --with-sysroot=/c/mingw810/x86_64-810-win32-seh-rt_v6-rev0/mingw64 --enable-shared --enable-static --disable-multilib --enable-languages=c,c++,fortran,lto --enable-libstdcxx-time=yes --enable-threads=win32 --enable-libgomp --enable-libatomic --enable-lto --enable-graphite --enable-checking=release --enable-fully-dynamic-string --enable-version-specific-runtime-libs --disable-libstdcxx-pch --disable-libstdcxx-debug --enable-bootstrap --disable-rpath --disable-win32-registry --disable-nls --disable-werror --disable-symvers --with-gnu-as --with-gnu-ld --with-arch=nocona --with-tune=core2 --with-libiconv --with-system-zlib --with-gmp=/c/mingw810/prerequisites/x86_64-w64-mingw32-static --with-mpfr=/c/mingw810/prerequisites/x86_64-w64-mingw32-static --with-mpc=/c/mingw810/prerequisites/x86_64-w64-mingw32-static --with-isl=/c/mingw810/prerequisites/x86_64-w64-mingw32-static --with-pkgversion='x86_64-win32-seh-rev0, Built by MinGW-W64 project' --with-bugurl=https://sourceforge.net/projects/mingw-w64 CFLAGS='-O2 -pipe -fno-ident -I/c/mingw810/x86_64-810-win32-seh-rt_v6-rev0/mingw64/opt/include -I/c/mingw810/prerequisites/x86_64-zlib-static/include -I/c/mingw810/prerequisites/x86_64-w64-mingw32-static/include' CXXFLAGS='-O2 -pipe -fno-ident -I/c/mingw810/x86_64-810-win32-seh-rt_v6-rev0/mingw64/opt/include -I/c/mingw810/prerequisites/x86_64-zlib-static/include -I/c/mingw810/prerequisites/x86_64-w64-mingw32-static/include' CPPFLAGS=' -I/c/mingw810/x86_64-810-win32-seh-rt_v6-rev0/mingw64/opt/include -I/c/mingw810/prerequisites/x86_64-zlib-static/include -I/c/mingw810/prerequisites/x86_64-w64-mingw32-static/include' LDFLAGS='-pipe -fno-ident -L/c/mingw810/x86_64-810-win32-seh-rt_v6-rev0/mingw64/opt/lib -L/c/mingw810/prerequisites/x86_64-zlib-static/lib -L/c/mingw810/prerequisites/x86_64-w64-mingw32-static/lib '
+Thread model: win32
+gcc version 8.1.0 (x86_64-win32-seh-rev0, Built by MinGW-W64 project)
+```
+
