--- a/开发环境搭建.md
+++ b/开发环境搭建.md
@@ -165,3 +165,7 @@ Thread model: win32
 gcc version 8.1.0 (x86_64-win32-seh-rev0, Built by MinGW-W64 project)
 ```
 
+## 补充
+
+> 如果第一次配置环境变量后没有重启电脑**ide**自带的cmd环境中不会生效,在ide图标右键**以管理员身份运行**
+> https://blog.csdn.net/zhiyilaodi/article/details/129368267
