--- a/开发环境搭建.md
+++ b/开发环境搭建.md
@@ -165,6 +165,56 @@ Thread model: win32
 gcc version 8.1.0 (x86_64-win32-seh-rev0, Built by MinGW-W64 project)
 ```
 
+## fatal error: event/goEvent.h: No such file or directory 缺少依赖文件
+
+**场景还原**
+
+> 执行如下一段代码,我用**go mod vendor**把包打包到项目目录后执行报错
+>
+> 原因是
+>
+> 因为在 Go 语言中，通常 `.h` 文件是 C 或 C++ 的头文件，而不是 Go 语言的源代码文件。所以当执行 `go mod vendor` 命令时，Go 语言会忽略所有后缀为 `.h` 的文件。	
+
+```go
+package main
+
+import (
+	"github.com/go-vgo/robotgo" //https://github.com/go-vgo/robotgo
+)
+
+func main() {
+	// 移动鼠标到指定位置
+	robotgo.MoveMouse(100, 200)
+	// 点击鼠标左键
+	robotgo.MouseClick("left", true)
+	// 双击鼠标右键
+	robotgo.MouseClick("right", true, 2)
+	// 按住鼠标左键
+	robotgo.MouseToggle("down")
+	// 释放鼠标左键
+	robotgo.MouseToggle("up")
+	// 滚动鼠标
+	robotgo.ScrollMouse(10, "up")
+}
+
+// 执行后报错
+# github.com/robotn/gohook
+vendor/github.com/robotn/gohook/hook.go:22:10: fatal error: event/goEvent.h: No such file or directory
+ #include "event/goEvent.h"
+          ^~~~~~~~~~~~~~~~~
+compilation terminated.
+
+Compilation finished with exit code 1
+```
+
+
+
+
+
+
+
+
+
 ## 补充
 
 > 如果第一次配置环境变量后没有重启电脑**ide**自带的cmd环境中不会生效,在ide图标右键**以管理员身份运行**
