--- a/gin框架/框架资料.md
+++ b/gin框架/框架资料.md
@@ -1,9 +1,10 @@
 ## 资料
 
-| 名称            | 地址                                                 |
-| --------------- | ---------------------------------------------------- |
-| 中文文档        | [link](https://gin-gonic.com/zh-cn/docs/benchmarks/) |
-| go wiki社区资料 | [link](https://learnku.com/go/wikis)                 |
+| 名称            | 地址                                                         |
+| --------------- | ------------------------------------------------------------ |
+| 中文文档        | [link](https://gin-gonic.com/zh-cn/docs/benchmarks/)         |
+| go wiki社区资料 | [link](https://learnku.com/go/wikis)                         |
+| go api 实战     | [link](https://learnku.com/courses/go-api/1.19/air-auto-reload/13480) |
 
 ## 安装gin
 
